<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_app_settings"
        android:key="pref_lastfm_title">
        <PreferenceScreen
            android:key="pref_app_playlistusage_settings"
            android:title="@string/pref_app_playlistusage_settings"
            android:summary="@string/pref_app_playlistusage_summary"
            android:persistent="true">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="pref_app_detail_setting"
            android:title="@string/pref_app_detail_logdata"
            android:summary="@string/pref_app_detail_summary"
            android:persistent="true">
            <CheckBoxPreference
                android:title="@string/pref_appdata_trashmode"
                android:key="pref_appdata_trashmode"
                android:summary="@string/pref_summary_pref_appdata_trashmode"
                android:defaultValue="true">
            </CheckBoxPreference>
            <CheckBoxPreference
                android:title="@string/pref_appdata_radiomode"
                android:key="pref_appdata_radiomode"
                android:summary="@string/pref_summary_pref_appdata_radiomode"
                android:defaultValue="false">
            </CheckBoxPreference>
            <EditTextPreference
                android:title="@string/pref_appdata_radioname"
                android:key="pref_appdata_radioname"
                android:summary="@string/pref_summary_pref_appdata_radioname"
                android:defaultValue="">
            </EditTextPreference>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_lastfm_title"
        android:key="pref_lastfm_title">
        <PreferenceScreen
            android:key="pref_lastfm_detail_settings"
            android:title="@string/pref_lastfm_logdata"
            android:summary="@string/pref_lastfm_summary"
            android:persistent="true">
            <Preference
                android:key="pref_static_field_key"
                android:selectable="false"
                android:summary="@string/be_advised_short"/>
            <EditTextPreference
                android:key="pref_lastfm_login"
                android:summary="@string/pref_summary_lastfm_user"
                android:title="@string/pref_lastfm_user"/>
            <EditTextPreference
                android:key="pref_lastfm_pasword"
                android:summary="@string/pref_summary_lastfm_password"
                android:title="@string/pref_lastfm_password"
                android:inputType="textPassword"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_developers_title"
        android:key="pref_developers_title">
        <CheckBoxPreference
            android:title="@string/pref_logging"
            android:key="pref_looging"
            android:summary="@string/pref_logging_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:title="@string/pref_logging_file"
            android:key="pref_looging_file"
            android:defaultValue="false">
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>