<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/dropbox"
        android:icon="@drawable/dropbox_small"
        android:title="@string/dropbox"
        android:showAsAction="always"/>
    <item android:id="@+id/drive"
        android:icon="@drawable/gdrive_small"
        android:title="@string/gdrive"
        android:showAsAction="always"/>
    <item android:id="@+id/lastfm"
        android:icon="@drawable/lastfmlogono_small"
        android:title="@string/lastfm"
        android:showAsAction="always"/>
    <item android:id="@+id/action_statistics"
        android:title="@string/statistics"/>
    <item android:id="@+id/action_badges"
        android:title="@string/badges"/>
    <item android:id="@+id/action_social"
        android:title="@string/social"/>
    <item android:id="@+id/action_settings"
        android:title="@string/settings"/>
    <item android:id="@+id/off"
        android:icon="@drawable/off"
        android:title="@string/off"/>
</menu>
